<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.esteban.proyectoCabeceros</groupId>
    <artifactId>ManejoDeSesiones</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>ManejoDeSesiones</name>
    <packaging>war</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.target>23</maven.compiler.target>
        <maven.compiler.source>23</maven.compiler.source>
        <junit.version>5.10.2</junit.version>
    </properties>

  <dependencies>
      <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>8.0.33</version>
      </dependency>
                     <dependency>
                         <groupId>jakarta.platform</groupId>
                         <artifactId>jakarta.jakartaee-api</artifactId>
                         <version>10.0.0</version>
                         <scope>provided</scope>
                     </dependency>
                 </dependencies>

                 <build>
                     <plugins>
                         <plugin>
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-compiler-plugin</artifactId>
                             <version>3.13.0</version>
                             <configuration>
                                 <source>23</source>
                                 <target>23</target>
                                 <compilerArgs>--enable-preview</compilerArgs>
                             </configuration>
                         </plugin>
                         <plugin>
                             <groupId>org.apache.tomcat.maven</groupId>
                             <artifactId>tomcat7-maven-plugin</artifactId>
                             <version>2.2</version>
                             <configuration>
                                 <url>http://localhost:8080/manager/text</url>
                                 <username>admin</username>
                                 <password>ITQ1234</password>
                             </configuration>
                         </plugin>
                         <plugin>
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-war-plugin</artifactId>
                             <version>3.4.0</version>
                         </plugin>
                     </plugins>
            </build>
</project>